视频回放软件增加是否加解密的配置项

--- a/PlayBack/EXE/config.ini
+++ b/PlayBack/EXE/config.ini
@@ -1,6 +1,8 @@
-;数据库类型，Oracle--0，SqlServer--1
+;DBTYPE 数据库类型，0--Oracle，1--SqlServer
+;ENCRYPT 数据库字段是否有加密，0--未加密，1--加密
 [CONFIG]
 DBTYPE=1
+ENCRYPT=1
 
 [SQLLINK]
 ServerPZ=nfutzTutfUhojwjsEeo3>ftbcbube<z{cutv>EXQ<bt>EJV<37/1/972/3:2>sfwsft<CEFMPMRT>sfejwpsQ
