修正视频回放程序和打印程序的数据库加密版本

--- a/PlayBack/CVideoCX/CVideoCX.rc
+++ b/PlayBack/CVideoCX/CVideoCX.rc
@@ -87,7 +87,7 @@ END
 IDD_CVIDEOCX_DIALOG DIALOGEX 0, 0, 603, 361
 STYLE DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
-CAPTION "视频回放查询"
+CAPTION "轨迹回放查询"
 FONT 9, "宋体"
 BEGIN
     EDITTEXT        IDC_EDIT1,215,43,125,18,ES_AUTOHSCROLL
